# MineSweeperWin32

./: CMakeLists.txt  CONTRIBUTORS.md  LICENSE.txt  README.md  main.c  resource.h  resource.rc
.github/workflows/: msbuild.yml
res/: resource.rc  version.h.in
src/: main.c  main.h
